# sk-experiments

./: .editorconfig  .gitignore  .prettierignore  README.md  TODO.md  TOPICS.md  deliberate_practise.txt  grit.txt  habits.txt  mastery.txt  package.json
.github/: PULL_REQUEST_TEMPLATE.md  commit-convention.md
archive/: README.md
async-currying/: README.md  index.js
babel-transpilation/: README.md  index.js  package.json
cpp/: .clang-tidy  .gitignore  README.md  format.docs.md  format.py  main.cpp  run.bat
cpp/experiments/build-with-cmake/: CMakeLists.txt  README.md
cpp/experiments/build-with-cmake/source/: Point.cpp  Point.hpp
cpp/experiments/cpp_python_binding/: CMakeLists.txt  README.md  errors.chatgpt.txt  errors.references.txt  errors.terminal.txt  example.cpp  something.py  vcpkg.json
cpp/experiments/employee_factory/: CMakeLists.txt  DESIGN_DOCUMENT.md  README.md
cpp/experiments/employee_factory/source/: CMakeLists.txt  employee.h  facility.h  janitor.cc  janitor.cpp  janitor.h  main.cc  main.cpp  maintenance.cc  maintenance.cpp  maintenance.h  operator.cc  operator.cpp  operator.h  person.cc  person.h  role.h  tester.cc  tester.cpp  tester.h
cpp/experiments/employee_factory/source/facility/: factory.cpp  factory.h
cpp/experiments/employee_factory/source/facility/impl/: factory.cpp
cpp/experiments/employee_factory/source/role/: employee.h  interface.h  janitor.cpp  janitor.h  maintenance.cpp  maintenance.h  operator.cpp  operator.h  tester.cpp  tester.h
cpp/experiments/employee_factory/source/role/impl/: janitor.cpp  maintenance.cpp  operator.cpp  tester.cpp
cpp/experiments/employee_factory/source/role/interface/: employee.h
cpp/experiments/lambda/source/: CMakeLists.txt  linear_algebra.hpp  main.cpp
cpp/experiments/lambda/source/linear_algebra/: coordinate.hpp
cpp/experiments/lambda/source/linear_algebra/impl/: coordinate.cpp
cpp/experiments/linear_algebra/: CMakeLists.txt  README.md
cpp/experiments/linear_algebra/display_vectors/: CMakeLists.txt  README.md
cpp/experiments/linear_algebra/display_vectors/pseudo_code/: README.md
cpp/experiments/linear_algebra/display_vectors/pseudo_code/src/: coordinate.txt  emulate_gui.txt  origin.txt  pixel.txt  screen.txt
cpp/experiments/linear_algebra/display_vectors/src/: CMakeLists.txt  display_vectors.hpp  driver.hpp  main.cpp
cpp/experiments/linear_algebra/display_vectors/src/display_vectors/: axis.hpp  coordinate.hpp  emulate_gui.hpp  origin.hpp  pixel.hpp  screen.hpp
cpp/experiments/linear_algebra/display_vectors/src/display_vectors/impl/: coordinate.cpp  emulate_gui.cpp  pixel.cpp  screen.cpp
cpp/experiments/linear_algebra/display_vectors/src/driver/: run_emulator_gui.hpp  run_terminal_gui_emulator.hpp
cpp/experiments/linear_algebra/display_vectors/src/driver/impl/: run_emulator_gui.cpp  run_terminal_gui_emulator.cpp
cpp/experiments/linear_algebra/linear_combinations/: README.md  main.cpp
cpp/experiments/linear_algebra/pseudo_code/: README.md
cpp/experiments/linear_algebra/pseudo_code/src/: Calculate.txt  Coordinate.txt  Dimension.txt  DimensionSymbol.txt  Direction.txt  calculate.txt  control.txt  coordinate.txt  dimension.txt  dimension_symbol.txt  main.txt
cpp/experiments/linear_algebra/src/: CMakeLists.txt  main.cpp
cpp/experiments/play_with_mongoose_c_cpp/src/: CMakeLists.txt  main.cpp
cpp/experiments/try_boost_asio/: CMakeLists.txt  README.md
cpp/experiments/try_boost_asio/src/: CMakeLists.txt  main.cpp
cpp/experiments/use-curl/: CMakeLists.txt  README.md
cpp/experiments/use-curl/mock_server/: README.md  package.json
cpp/experiments/use-curl/src/: CMakeLists.txt  main.cpp
docker/: README.md
docker/experiments/play-with-docker/three/: CMakeLists.txt  README.md  main.cpp
docker/experiments/play_with_docker/service/three/: CMakeLists.txt  Dockerfile  README.md
docs/: README.md  anniversary.md  create-problem-for-dp.md  getting-lost-in-details.md  graphql-learning-path.md  how-to-practice-algorithmic-solving.md  how-to-start-anything.txt  how-to-understand-beginners.txt  how-to-use-vim.md  react-scripts-setup-story.md  reactjs-mouse-move-throttle.md  reflect-on-my-learning-journey.md  reverse-engineer-thought-process.txt  the-learning-difficulty-of-perfectionism.md  transform-problem.md  understand-beginners.md
eslint-custom-rules/: README.md  app.js
get-webpack-js-output/: README.md  package.json  print-build-assets.ts  tsconfig.json
javascript/: .gitignore  .prettierignore  .prettierrc.js  .prettierrc.yml  README.md  package.json
jsonp/: README.md  server.js
math/: 13.02.2024.md  README.md  resources.txt
multiple-projects-demo/: README.md
nodejs-express-middleware/: README.md  package.json
picture-album/: .gitignore  package.json
powershell/: README.md
python/: README.md  main.py  requirements.txt
react-es5/: README.md
react-event-handler-external-content/: .prettierrc  README.md  index.html
react-router-modal/: index.html
sandbox/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  steps.txt  vcpkg.json
sandbox/docs/: README.md  unresolved-reference-errors.md  vcpkg-different-triplet.md  vcpkg-different-triplet.txt
sandbox/modules/: CMakeLists.txt  README.md
sandbox/samples/: CMakeLists.txt  README.md
sandbox/samples/make_cli/: CMakeLists.txt  README.md  main.cpp
sandbox/samples/mycli/: CMakeLists.txt  README.md  docker-compose.yml  main.cpp  mongo.conversation.txt  test-file.txt
sandbox/samples/print_aswell/: CMakeLists.txt  README.md  main.cpp
sandbox/samples/print_something/: CMakeLists.txt  README.md  main.cpp
sandbox/samples/print_something/src/: CMakeLists.txt
sandbox/samples/use_boost_asio/: CMakeLists.txt  README.txt  main.cpp
sandbox/samples/use_wxwidgets/: CMakeLists.txt  README.md  main.cpp
sandbox/samples/use_wxwidgets/conversation/: 01.txt  02.txt
scripts/: ListLocalAndRemoteBranches.ps1  build.js
streams/: .gitignore  how-streams-transfer-data.js  how-streams-transform-data.docs.md  one-source-multiple-destinations.docs.md  one-source-multiple-destinations.js  (+3 more)
(+848 files in other folders)
